--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>https://github.com/akarapontdev1996/idptool-adhoc/blob/main/IDP%20Tools.ipa</string>
+					<string>https://raw.githubusercontent.com/akarapontdev1996/idptool-adhoc/main/IDP%20Tools.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
